Current status (upload still does not work).
