# src/main/java/org/testdashboard/api/FileUploadController.java
@@ -1,21 +1,0 @@
-package org.testdashboard.api;
-
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.multipart.MultipartFile;
-
-@Controller
-public class FileUploadController {
-
-    @PostMapping("/upload")
-    public ResponseEntity<?> handleFileUpload(@RequestParam("file") MultipartFile file) {
-
-        return new ResponseEntity("Successfully uploaded - " +
-                file.getOriginalFilename(), new HttpHeaders(), HttpStatus.OK);
-    }
-
-}
